# plus_planner_core

./: .gitignore  .gitmodules  README.md  pyproject.toml  tasks.py  teste.sqlite3
migrations/models/: 0_20240415225712_init.py  0_20240507222936_init.py  1_20240507223154_init2.py  2_20240509161954_add super user.py  3_20240509193448_adjust token.py  4_20240509205137_adjust profile.py  5_20240514195731_adjusts.py
src/: backends.py  client.py  config.py  enums.py  main.py  middlewares.py  models.py  utils.py
src/auth/: backends.py  controller.py  exceptions.py  filters.py  logger.py  models.py  repository.py  router.py  schemas.py  service.py  services_old.py
src/base/: enums.py  filters.py  models.py  schemas.py  service.py
src/billing/: filters.py  models.py
src/clinic_office/: controller.py  filters.py  models.py  repository.py  router.py  schemas.py  service.py
src/log/: models.py  router.py  schemas.py  services.py
src/manager/: controller.py  filters.py  repository.py  router.py  schemas.py  service.py
src/marketing/: controller.py  filters.py  repository.py  router.py  schemas.py  service.py
src/scheduler/: api_client.py  broker.py  client.py  logger.py  manager.py  message.py  models.py  schemas.py  service.py
src/tests/: base.py  conftest.py  test_auth.py
src/wait_list/: client.py  logger.py  manager.py  schemas.py
