[tool.poetry]
name = "plus-planner-core"
version = "0.1.0"
description = ""
authors = ["Pedro Santana"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tortoise-orm = "^0.20.0"
fastapi = "^0.110.1"
fastapi-filter = "^1.1.0"
fastapi-pagination = "^0.12.22"
python-dotenv = "^1.0.1"
invoke = "^2.2.0"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
pydantic = "^2.6.4"
aerich = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pre-commit = "^3.7.0"


[tool.aerich]
tortoise_orm = "src.main.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
